2002-11-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/execbox.*: don't compile this for win32

2002-11-04  Max Horn  <max@quendi.de>
	* conf/Configuration.*, conf/XMLEntity.*: some cleanup (in function args,
	  using 'const string &' instead of just 'string' or 'const string' is more
	  efficient as the string doesn't have to be cloned temporarily)
	* menulist.cc: do not swallow certain command combos (Cmd-Q, Alt-X, ...) when
	  nothing is selected
	* game.cc, file/utils.*: Added and make use of clone_system_path()

2002-11-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: fixed division by zero
	* shapes/Makefile.am: removed outdated OMIT_DEPENDENCIES
	* mapedit/compile.cc: std::string
	* mapedit/execbox.cc: #include <iostream>

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/font.cc: fixed hang in french BG

2002-10-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/shapelst.cc,chunklst.cc,paledit.cc,combo.cc: mouse wheel

2002-10-18  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc,mapedit/chunklst.cc,etc: "Paint with chunks" mode added.

	* mapedit/shapelst.cc,etc:  Keep shape browsers around so that
	they're at the same spot and selection when you return to them.

2002-10-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* mapedit/exult_studio.glade: East is a direction too :-)
	* objs/egg.cc: use shape 200, frame 1-5 for new missile eggs
	* mapedit/exult_studio.glade: removed tabs from two names
	* mapedit/exult_studio.glade: made egg_window notebook unscrollable,
	since the scrollable option is apparently broken in windows

2002-10-10  Max Horn  <max@quendi.de>

	* Info.plist.in: No .nib file used anymore
	* configure.in: Removed some unnecessary flags on MacOS X
	* audio/midi_drivers/mac_midi.cc: Use assert() instead of DebugStr()
	* gumps/AudioOptions_gump.cc: Work around a compiler bug on MacOS X
